--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>CALCULATOR</h1>
+        <h1>〚 CALCULATOR 〛</h1>
         <div id="calculator">
             <div id="calculator-container">
 
